Replace usage of JFunction by Function where possible